@@ -1,3 +1,9 @@
+2002-02-12  Ben Elliston  <bje@redhat.com>
+
+	* gasp/flonums.asm: New test.
+	* gasp/flonums.err: New result.
+	* gasp/flonums.out: Likewise.
+
 2002-02-12  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* gas/hppa/reloc/reloc.exp (labelopbug.s): Change test to suit
